Attempt to configure and login, failed

--- a/graveyard/appFlowy/.env.example
+++ b/graveyard/appFlowy/.env.example
@@ -9,7 +9,13 @@
 # =============================================================================
 
 # URL for sqlx
-DATABASE_URL=postgres://postgres:password@localhost:5432/postgres
+DATABASE_URL=postgres://postgres:${POSTGRES_PASSWORD}@appflowy-postgres:5432/postgres
+
+# PostgreSQL configuration
+POSTGRES_USER=postgres
+POSTGRES_DB=postgres
+POSTGRES_PASSWORD=EXIST_24_CHAR_PASSWORD
+
 # Uncomment this to enable build without database
 # .sqlx files must be pregenerated
 # SQLX_OFFLINE=true
@@ -19,9 +25,12 @@ DATABASE_URL=postgres://postgres:password@localhost:5432/postgres
 # =============================================================================
 
 # GoTrue URL that the appflowy service will use to connect to gotrue
-APPFLOWY_GOTRUE_BASE_URL=http://localhost:9999
-APPFLOWY_DATABASE_URL=postgres://postgres:password@localhost:5432/postgres
+APPFLOWY_BASE_URL=https://appflowy.local.existential.company
+APPFLOWY_GOTRUE_BASE_URL=http://appflowy-gotrue:9999
+APPFLOWY_DATABASE_URL=postgres://postgres:${POSTGRES_PASSWORD}@appflowy-postgres:5432/postgres
+APPFLOWY_REDIS_URI=redis://appflowy-redis:6379
 APPFLOWY_ACCESS_CONTROL=true
+APPFLOWY_AUTO_USER_CREATION=true
 APPFLOWY_WEBSOCKET_MAILBOX_SIZE=6000
 APPFLOWY_DATABASE_MAX_CONNECTIONS=40
 APPFLOWY_DOCUMENT_CONTENT_SPLIT_LEN=8000
@@ -41,15 +50,17 @@ GOTRUE_JWT_SECRET=EXIST_32_CHAR_HEX_KEY
 # Expiration time in seconds for the JWT token
 GOTRUE_JWT_EXP=7200
 
+GOTRUE_SAML_ENABLED=false
+
 # External URL where the GoTrue service is exposed
 # The email verification link provided to users will redirect them to this specified host
 # For instance, if you're running your application locally using 'docker compose up -d',
-# you can set this value to 'http://localhost'
-API_EXTERNAL_URL=http://localhost:9999
+# you can set this value to 'https://localhost'
+API_EXTERNAL_URL=https://appflowy.local.existential.company
 
 # GoTrue Database Connection
 # Database URL that gotrue will use
-GOTRUE_DATABASE_URL=postgres://postgres:password@postgres:5432/postgres?search_path=auth
+GOTRUE_DATABASE_URL=postgres://postgres:${POSTGRES_PASSWORD}@appflowy-postgres:5432/postgres?search_path=auth
 
 # User Registration & Login Settings
 # User sign up will automatically be confirmed if this is set to true
@@ -88,6 +99,7 @@ APPFLOWY_MAILER_SMTP_HOST=smtp.gmail.com
 APPFLOWY_MAILER_SMTP_USERNAME=notify@appflowy.io
 APPFLOWY_MAILER_SMTP_EMAIL=notify@appflowy.io
 APPFLOWY_MAILER_SMTP_PASSWORD=email_sender_password
+APPFLOWY_MAILER_SMTP_PORT=465
 APPFLOWY_MAILER_SMTP_TLS_KIND=wrapper # "none" "wrapper" "required" "opportunistic"
 
 # =============================================================================
@@ -98,25 +110,25 @@ APPFLOWY_MAILER_SMTP_TLS_KIND=wrapper # "none" "wrapper" "required" "opportunist
 GOTRUE_EXTERNAL_GOOGLE_ENABLED=false
 GOTRUE_EXTERNAL_GOOGLE_CLIENT_ID=
 GOTRUE_EXTERNAL_GOOGLE_SECRET=
-GOTRUE_EXTERNAL_GOOGLE_REDIRECT_URI=http://localhost:9999/callback
+GOTRUE_EXTERNAL_GOOGLE_REDIRECT_URI=https://appflowy.local.existential.company/callback
 
 # GitHub OAuth2
 GOTRUE_EXTERNAL_GITHUB_ENABLED=false
 GOTRUE_EXTERNAL_GITHUB_CLIENT_ID=
 GOTRUE_EXTERNAL_GITHUB_SECRET=
-GOTRUE_EXTERNAL_GITHUB_REDIRECT_URI=http://localhost:9999/callback
+GOTRUE_EXTERNAL_GITHUB_REDIRECT_URI=https://appflowy.local.existential.company/callback
 
 # Discord OAuth2
 GOTRUE_EXTERNAL_DISCORD_ENABLED=false
 GOTRUE_EXTERNAL_DISCORD_CLIENT_ID=
 GOTRUE_EXTERNAL_DISCORD_SECRET=
-GOTRUE_EXTERNAL_DISCORD_REDIRECT_URI=http://localhost:9999/callback
+GOTRUE_EXTERNAL_DISCORD_REDIRECT_URI=https://appflowy.local.existential.company/callback
 
 # Apple OAuth2
 GOTRUE_EXTERNAL_APPLE_ENABLED=false
 GOTRUE_EXTERNAL_APPLE_CLIENT_ID=
 GOTRUE_EXTERNAL_APPLE_SECRET=
-GOTRUE_EXTERNAL_APPLE_REDIRECT_URI=http://localhost:9999/callback
+GOTRUE_EXTERNAL_APPLE_REDIRECT_URI=https://appflowy.local.existential.company/callback
 
 # =============================================================================
 # 🏗️ INFRASTRUCTURE SERVICES: Object storage and networking
@@ -131,11 +143,11 @@ AWS_SECRET=minioadmin
 # =============================================================================
 
 # URL that connects to redis for admin frontend
-ADMIN_FRONTEND_REDIS_URL=redis://localhost:6379
+ADMIN_FRONTEND_REDIS_URL=redis://appflowy-redis:6379
 # URL that connects to gotrue service for admin frontend
-ADMIN_FRONTEND_GOTRUE_URL=http://localhost:9999
+ADMIN_FRONTEND_GOTRUE_URL=https://appflowy.local.existential.company
 # URL that connects to the appflowy cloud service for admin frontend
-ADMIN_FRONTEND_APPFLOWY_CLOUD_URL=http://localhost:8000
+ADMIN_FRONTEND_APPFLOWY_CLOUD_URL=http://appflowy-cloud:8000
 # Base URL path for the admin frontend (usually /console for production, can be empty for development)
 ADMIN_FRONTEND_PATH_PREFIX=
 
@@ -146,11 +158,11 @@ ADMIN_FRONTEND_PATH_PREFIX=
 # File Storage
 APPFLOWY_S3_CREATE_BUCKET=true
 APPFLOWY_S3_USE_MINIO=true
-APPFLOWY_S3_MINIO_URL=http://localhost:9000 # change this if you are using a different address for minio"
+APPFLOWY_S3_MINIO_URL=http://appflowy-minio:9000
 APPFLOWY_S3_ACCESS_KEY=${AWS_ACCESS_KEY}
 APPFLOWY_S3_SECRET_KEY=${AWS_SECRET}
 APPFLOWY_S3_BUCKET=appflowy
-# APPFLOWY_S3_REGION=us-east-1
+APPFLOWY_S3_REGION=us-east-1
 
 # =============================================================================
 # 🤖 AI FEATURES: Optional (configure only if you want AI functionality)
@@ -171,12 +183,12 @@ AI_AZURE_OPENAI_API_BASE=
 AI_AZURE_OPENAI_API_VERSION=
 
 AI_SERVER_PORT=5001
-AI_SERVER_HOST=localhost
-AI_DATABASE_URL=postgresql+psycopg://postgres:password@localhost:5432/postgres
-AI_REDIS_URL=redis://localhost:6379
+AI_SERVER_HOST=appflowy-ai
+AI_DATABASE_URL=postgresql+psycopg://postgres:${POSTGRES_PASSWORD}@appflowy-postgres:5432/postgres
+AI_REDIS_URL=redis://appflowy-redis:6379
 AI_APPFLOWY_BUCKET_NAME=${APPFLOWY_S3_BUCKET}
-AI_APPFLOWY_HOST=http://localhost:8000
-AI_MINIO_URL=http://localhost:9000
+AI_APPFLOWY_HOST=http://appflowy-cloud:8000
+AI_MINIO_URL=http://appflowy-minio:9000
 
 # Embedding Configuration
 APPFLOWY_EMBEDDING_CHUNK_SIZE=500
@@ -188,27 +200,28 @@ APPFLOWY_EMBEDDING_CHUNK_OVERLAP=50
 
 # AppFlowy Indexer (for search functionality)
 APPFLOWY_INDEXER_ENABLED=true
-APPFLOWY_INDEXER_DATABASE_URL=postgres://postgres:password@localhost:5432/postgres
-APPFLOWY_INDEXER_REDIS_URL=redis://localhost:6379
+APPFLOWY_INDEXER_DATABASE_URL=postgres://postgres:${POSTGRES_PASSWORD}@appflowy-postgres:5432/postgres
+APPFLOWY_INDEXER_REDIS_URL=redis://appflowy-redis:6379
 APPFLOWY_INDEXER_EMBEDDING_BUFFER_SIZE=5000
 
 # AppFlowy Worker
-APPFLOWY_WORKER_REDIS_URL=redis://localhost:6379
-APPFLOWY_WORKER_DATABASE_URL=postgres://postgres:password@localhost:5432/postgres
+APPFLOWY_WORKER_REDIS_URL=redis://appflowy-redis:6379
+APPFLOWY_WORKER_DATABASE_URL=postgres://postgres:${POSTGRES_PASSWORD}@appflowy-postgres:5432/postgres
 
 # =============================================================================
 # 🌐 WEB FRONTEND: AppFlowy Web interface
 # =============================================================================
 
 # AppFlowy Web
-APPFLOWY_WEB_URL=http://localhost:3000
+APPFLOWY_WEB_URL=http://appflowy-web:80
+APPFLOWY_WEBSOCKET_BASE_URL=ws://appflowy.local.existential.company/ws
 
 # =============================================================================
 # 🗄️ PGADMIN: Database Management Web Interface
 # =============================================================================
 
 # PgAdmin credentials for database management web UI
-# You can access pgadmin at http://localhost/pgadmin when running with docker-compose
+# You can access pgadmin at https://localhost/pgadmin when running with docker-compose
 # Use the DATABASE_URL values when connecting to the database
 PGADMIN_DEFAULT_EMAIL=EXIST_DEFAULT_EMAIL
 PGADMIN_DEFAULT_PASSWORD=EXIST_24_CHAR_PASSWORD
