--- a/hosting/caddy/docker-compose.yml
+++ b/hosting/caddy/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     networks:
       exist:
         # ipv4_address: 10.0.0.5 # Verify by running `docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' caddy`
+    privileged: true
     ports:
       - "80:80" # Standard HTTP port for local development
       - "443:443" # Standard HTTPS port for local development
