--- a/hosting/portainer/docker-compose.yml
+++ b/hosting/portainer/docker-compose.yml
@@ -6,9 +6,14 @@ services:
       # - 40800:8000
       - 49443:9443
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      # For Docker
+      # - /var/run/docker.sock:/var/run/docker.sock
+      # For Podman
+      - /run/user/1000/podman/podman.sock:/var/run/docker.sock:Z
       - portainer_data:/data
-      - ./portainer_password.txt:/shared/portainer_password.txt:ro
+      - ./portainer_password.txt:/shared/portainer_password.txt:Z
+    security_opt:
+      - label=disable
     networks:
       - exist
     restart: unless-stopped
