First pass web-search; shelved

--- a/.env.example
+++ b/.env.example
@@ -32,20 +32,27 @@ EXIST_ENABLE_NAS_REDIS=true
 EXIST_ENABLE_SERVICES_ACTUALBUDGET=false
 EXIST_ENABLE_SERVICES_APPSMITH=false
 EXIST_ENABLE_SERVICES_DASHY=true
+EXIST_ENABLE_SERVICES_FIRECRAWL=true # Librechat related
 EXIST_ENABLE_SERVICES_ITTOOLS=false
+EXIST_ENABLE_SERVICES_JINA=true # Librechat related
 EXIST_ENABLE_SERVICES_LOWCODER=false
 EXIST_ENABLE_SERVICES_MEALIE=false
 EXIST_ENABLE_SERVICES_NIGHTLIO=false
 EXIST_ENABLE_SERVICES_NOCODB=true
 EXIST_ENABLE_SERVICES_NTFY=true
 EXIST_ENABLE_SERVICES_RABBITMQ=true
+EXIST_ENABLE_SERVICES_SEARXNG=true # Librechat related
 EXIST_ENABLE_SERVICES_VIKUNJA=true
 EXIST_ENABLE_SERVICES_WINDMILL=true
+
+
 
 EXIST_DEFAULT_EMAIL=EXIST_CLI
 
 EXIST_DEFAULT_USERNAME=EXIST_CLI
 EXIST_DEFAULT_PASSWORD=EXIST_24_CHAR_PASSWORD
+
+EXIST_DEFAULT_FIRECRAWL_API_KEY=EXIST_24_CHAR_PASSWORD
 
 # Docker network subnet (must match your docker network create command)
 EXIST_DEFAULT_DOCKER_NETWORK_SUBNET=10.0.0.0/24
