--- a/ai/libreChat/.env.example
+++ b/ai/libreChat/.env.example
@@ -652,14 +652,18 @@ OPENWEATHER_API_KEY=
 
 # Search Provider (Required)
 # SERPER_API_KEY=your_serper_api_key
-
+# or
+SEARXNG_INSTANCE_URL=http://searxng:8080/
+# SEARXNG_API_KEY=your_searxng_api_key  # Optional
+ 
 # Scraper (Required)
-# FIRECRAWL_API_KEY=your_firecrawl_api_key
+FIRECRAWL_API_KEY=EXIST_DEFAULT_FIRECRAWL_API_KEY
 # Optional: Custom Firecrawl API URL
-# FIRECRAWL_API_URL=your_firecrawl_api_url
+FIRECRAWL_API_URL=http://firecrawl-api:3002/
 
 # Reranker (Required)
-# JINA_API_KEY=your_jina_api_key
+JINA_API_KEY=EXIST_DEFAULT_JINA_API_KEY
+JINA_API_URL=http://jina-gateway:8080/
 # or
 # COHERE_API_KEY=your_cohere_api_key
 
