--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,7 @@ EXIST_ENABLE_NAS_REDIS=true
 EXIST_ENABLE_SERVICES_ACTUALBUDGET=false
 EXIST_ENABLE_SERVICES_APPSMITH=false
 EXIST_ENABLE_SERVICES_DASHY=true
+EXIST_ENABLE_SERVICES_IMMICH=false # Recommended to run this directly from the immich directory (not here)
 EXIST_ENABLE_SERVICES_ITTOOLS=false
 EXIST_ENABLE_SERVICES_LOWCODER=false
 EXIST_ENABLE_SERVICES_MEALIE=false
